--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -97,7 +97,7 @@
     {% block content %} {% endblock %}
 </div>
 <div id="footer" class="flex-hor-center">
-    <span>© 2017-2020 yushu.im created by 七月</span>
+        <a href="https://github.com/">wenjian---代码改变世界</a>
 </div>
 </body>
 
